# nvapi_standalone

./: README.md  build-wine32.txt  build-wine64.txt  build_d3d11_option.patch  meson.build  nvapi-init.sh  package-release.sh  setup_nvapi.sh
dlls/: meson.build
dlls/nvapi/: .nvapi.c.swp  Makefile.in  dxvk.idl  meson.build  nvapi.c  nvapi.rc
dlls/nvapi/tests/: nvapi.c
dlls/nvapi64/: Makefile.in  meson.build  nvapi64.rc
dlls/nvcuda/: internal.c  meson.build  nvcuda.c  nvcuda.rc  nvcuda.spec
dlls/nvcuvid/: meson.build  nvcuvid.c  nvcuvid.rc
dlls/nvencodeapi/: meson.build  nvencodeapi.c  nvencodeapi.rc
dlls/nvencodeapi64/: meson.build  nvencodeapi64.rc
include/: .nvapi.h.swp  .nvml.h.swp  Xlib.h  nvapi.h  nvapi_lite.h  nvsettings.h  winnt.h  winternl.h
include/ddk/: ntifs.h  wdm.h
include/wine/: exception.h  port.h  server_protocol.h  wined3d.h
utils/: meson.build  setup_nvapi.sh.in
